--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "humane_society_notifications",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with [Create Elm App](https://github.com/halfzebra/create-elm-app).",
+  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Joseph Fraley",
+  "license": "MIT",
   "dependencies": {
     "firebase": "^3.6.0",
     "moment": "^2.16.0",
