Switch auth method to the firebase-admin SDK.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "firebase": "^3.6.0",
+    "firebase-admin": "^4.0.3",
     "moment": "^2.16.0",
     "node-fetch": "^1.6.3",
     "osmosis": "^1.1.1"
