--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Joseph Fraley",
@@ -16,5 +17,8 @@
     "moment": "^2.16.0",
     "node-fetch": "^1.6.3",
     "osmosis": "^1.1.1"
+  },
+  "devDependencies": {
+    "jest": "^17.0.3"
   }
 }
