--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint source",
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest && npm run lint"
   },
   "keywords": [],
   "author": "Joseph Fraley",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "codecov": "^1.0.1",
+    "eslint": "^3.11.0",
     "jest": "^17.0.3"
   },
   "jest": {
